corrected description of separable problems

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ $$\begin{align*}
 \mathrm{subject\ to}\ & A_1x_1 + A_2x_2 + Bz = c
 \end{align*}$$
 
-<p>with $f_1$ (if present) strongly convex and quadratic on its domain, $f_2$ (if present) strongly
+<p>with $f_1$ (if present) strongly convex and quadratic plus the indicator of an affine subspace, $f_2$ (if present) strongly
 convex and twice continuously differentiable in the interior of its domain, while $g$ is proper, closed
 and convex. Linear operators $A_1, A_2, B$ need to be specified only if the corresponding term in the 
 objective is present, and they are of appropriate dimension along with vector $c$ in the constraints.</p>
