updated setup information

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@ applied to a Lasso problem with 3K observations and 500K features, for a total o
 
 <p>Simply click on one of the links on top of the page, and either clone the GitHub repository or uncompress the
 zip or tar.gz archive. Then move with the MATLAB command line to
-the directory of ForBES. Compile all the <em>mex</em>-files required by simply hitting</p>
+the directory of ForBES, and execute the following command:</p>
 
-<pre><code>&gt; make
+<pre><code>&gt; setup_forbes
 </code></pre>
+
+<p>This will compile all the necessary source files and install the directory into MATLAB's path.</p>
 
 <h2 class="inset-text">
 <a id="how-to-use-it" class="anchor" href="#how-to-use-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use it</h2>
