--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@ terms and constraints, while <code>opt</code> describes, e.g., details on the al
 criteria, the level of verbosity, and so on. In the following we describe more in detail how to define
 these structures. Output <code>out</code> will contain the results of the optimization process.</p>
 
-<p>Examples on how to use <code>forbes</code> can be found in the <a href="https://github.com/lostella/ForBES/tree/master/demos">demos folder</a>.
+<p>Examples on how to use <code>forbes</code> can be found in the <a href="https://github.com/lostella/ForBES/tree/master/demos" target="_blank">demos folder</a>.
 Furthermore, you can access the help file of the solvers directly from MATLAB with</p>
 
 <pre><code>&gt; help forbes
 </code></pre>
 
 <h2 class="inset-text">
-<a id="problems" class="anchor" href="#problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>Problem</h2>
+<a id="problems" class="anchor" href="#problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>Defining the problem</h2>
 
 <p>We consider here problems in the form</p>
 
 $$\begin{align*}
-\mathrm{minimize}\ & f_1(C_1x_1-d_1) + f_2(C_2x_2-d_2) + g(z) \tag{gen}\\
+\mathrm{minimize}\ & f_1(C_1x_1-d_1) + f_2(C_2x_2-d_2) + g(z)\\
 \mathrm{subject\ to}\ & A_1x_1 + A_2x_2 + Bz = b
 \end{align*}$$
 
@@ -119,7 +119,7 @@ differentiable. Function $g$ is any closed, proper, convex function.</p>
 
 <p>All the functions involved in the problem (except for $f_1$ in the unconstrained case, when it is assumed to be quadratic
 and therefore defined by its Hessian $Q$ and linear term $q$), can be picked from a library of functions available in the
-"library" directory. This contains procedures returning commonly used functions, specified by a list of parameters if needed.
+<a href="https://github.com/lostella/ForBES/tree/master/library" target="_blank">library folder</a>. This contains procedures returning commonly used functions, specified by a list of parameters if needed.
 These procedures can be invoked and their result directly assigned to the structure containing the problem. For example:</p>
 
 <pre><code>prob.f2 = logLogistic(m); % f2 is the log-logistic function times a coefficient m
@@ -127,8 +127,8 @@ prob.g = nuclearNorm(m, n); % g is the nuclear norm for m-by-n matrices
 prob.g = indPos(); % g is the indicator function of the nonnegative orthant
 </code></pre>
 
-<p>Check the documentation of each of the functions in the "library" folder for more information on how to use them and what
-parameters they require.</p>
+<p>Check the documentation of each of the functions in the <a href="https://github.com/lostella/ForBES/tree/master/library" target="_blank">library folder</a>
+for more information on how to use them and what parameters they require.</p>
 
 <h2 class="inset-text">
 <a id="parameters" class="anchor" href="#parameters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Problem attributes</h2>
@@ -145,6 +145,13 @@ parameters they require.</p>
 </thead>
 <tbody>
 <tr>
+<td><code>prob.f1</code> <br> <code>prob.f2</code> <br> <code>prob.g</code></td>
+<td>functions of the <a href="https://github.com/lostella/ForBES/tree/master/library" target="_blank">library folder</a>.</td>
+<td>no</td>
+<td>the zero function</td>
+<td>Functions $f_1$, $f_2$ and $g$ in the cost. See <a href="#functions">Functions</a> for more information. Function $f_1$ is specified this way only for problems in the form $(1)$.</td>
+</tr>
+<tr>
 <td>
 <code>prob.Q</code> <br> <code>prob.q</code>
 </td>
@@ -152,13 +159,6 @@ parameters they require.</p>
 <td>no</td>
 <td>$Q = 0$ <br> $q = 0$</td>
 <td>The Hessian and linear parts of the quadratic term $f_1$, in case of unconstrained composite problems $(2).$</td>
-</tr>
-<tr>
-<td><code>prob.f1</code> <br> <code>prob.f2</code> <br> <code>prob.g</code></td>
-<td>function</td>
-<td>no</td>
-<td>the zero function</td>
-<td>Functions $f_1$, $f_2$ and $g$ in the cost. See <a href="#functions">Functions</a> for more information.</td>
 </tr>
 <tr>
 <td>
