--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to ForBES &mdash; ForBES 1.0 documentation</title>
+    <title>Welcome to ForBES &mdash; ForBES documentation</title>
     
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="ForBES 1.0 documentation" href="#" />
+    <link rel="top" title="ForBES documentation" href="#" />
     <link rel="next" title="Installation" href="installation.html" />
    
   
